# applet-datetime

./: configure.ac
debian/: changelog  control
src/: Makefile.am  cpdatetime.c  cpdatetime.desktop
